@@ -27,6 +27,7 @@ Animation::Animation() {
     curFrameStartTime = SDL_GetTicks();
     frameDurationTime = 1;
     curFrame = 0;
+    curFrameOverride = INVALID_FRAME;
     loopsLeft = -1;
 }
 
@@ -65,7 +66,8 @@ unsigned int Animation::getCurrentFrameNumber() {
             }
         }
     }
-    return curFrame;
+
+    return (curFrameOverride != INVALID_FRAME) ? curFrameOverride : curFrame;
 }
 
 SDL_Surface* Animation::getFrame() {
